# CameraHMR

./: .dockerignore  .env.example  .gitignore  Dockerfile  ReadMe.md  compose.yaml  demo.py  demo_keypoints.py  eval.py  mesh_estimator.py  pyproject.toml  requirements.txt
CamSMPLify/: cam_smplify.py
CamSMPLify/utils/: renderer_cam.py
core/: constants.py  densekp_model.py
core/backbones/: vit.py
core/configs/: __init__.py
core/datasets/: dataset_train.py  dataset_val.py
core/utils/: checkpoint_io.py  geometry.py  renderer_pyrd.py  utils_detectron2.py
docs/: bedlam2.md  environment.md  windows-wsl-docker.md
scripts/: check_demo_data.py  fetch_demo_data_windows.bat  fetch_demo_data_windows.ps1
