[project]
name = "camerahmr"
version = "0.1.0"
description = "CameraHMR research code with a reproducible uv environment."
readme = "ReadMe.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "albumentations==1.3.1",
  "chumpy==0.70",
  "einops==0.8.0",
  "hydra-colorlog==1.2.0",
  "joblib==1.4.2",
  "loguru==0.7.3",
  "numpy==1.23.5",
  "omegaconf==2.3.0",
  "opencv-python==4.10.0.84",
  "pandas==2.1.1",
  "pyrootutils==1.0.4",
  "pytorch-lightning==2.0.7",
  "pyyaml==6.0.2",
  "rich==14.0.0",
  "scikit-image==0.21.0",
  "scipy==1.10.1",
  "smplx==0.1.28",
  "tensorboard==2.14.0",
  "timm==1.0.12",
  "yacs==0.1.8",
]

[project.optional-dependencies]
cpu = [
  "torch==2.0.0",
  "torchaudio==2.0.1",
  "torchvision==0.15.1",
]
cu118 = [
  "torch==2.0.0",
  "torchaudio==2.0.1",
  "torchvision==0.15.1",
]
cu128 = [
  "torch==2.7.1",
  "torchaudio==2.7.1",
  "torchvision==0.22.1",
]
demo = [
  "matplotlib==3.8.4",
  "ninja>=1.11,<2",
  "pyrender==0.1.45",
  "setuptools>=68,<76",
  "trimesh==4.4.9",
  "wheel>=0.41,<1",
]
train = [
  "wandb==0.17.9",
]
data = [
  "webdataset>=0.2.0,<0.3",
]
optimize = [
  "jpeg4py==0.1.4",
]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.5,<1",
]

[tool.uv]
package = false
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
    { extra = "cu128" },
  ],
]

[tool.uv.extra-build-dependencies]
chumpy = ["pip"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
